--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -5,13 +5,13 @@
     <link href="C:\Users\joelj\Desktop\Programing\personal-site-v1-plain\static-page-contnet\styles.css" rel="stylesheet" type="text/css">
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" type="text/css">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 
-<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Syne:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Syne:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body class="body">
@@ -30,16 +30,16 @@
                 <p class="decription">Okay, Yo Visitor !</p>
                 <p class="decription">Hey, I'm Joel — a 17-year-old developer, athlete, and all-around builder.</p>
                 <p class="decription">
-I’ve always been passionate about writing code, lifting weights, and jumping into just about any game or activity I can find. And like most 17-year-olds, I also make time (somewhat heroically) to study for the JEE.</p>
-<p class="decription" >My coding journey leveled up when I joined Hack Club—a turning point where I not only improved my skills but also found a community that fueled my growth. That experience pushed me to host two full-scale hackathons
- <a href="https://counterspell.hackclub.com/bengaluru" class="decription-1">CounterSpell</a> <a class="decription-1">and</a> <a href="https://scrapyard.hackclub.com/bengaluru" class="decription-1">Scrapyard</a> in Bengaluru </p> <p class="decription">My builder instinct didn’t stop there. In April 2024, I launched Klide, a next-gen Point of Sale system that’s currently in development. Around the same time, I also began working on Stedu OS—an educational platform for Stedu, a nonprofit initiative aimed at shaping the future of education.
-</p><p class="decription">Whether it’s building, shipping, or just tinkering, I love pushing boundaries with code—and I’m just getting started.</p>
+I’ve always been passionate about writing code, lifting weights, and jumping into any game or activity I can find. And UNLIKE most 17-year-olds, I also make time (kinda) to study for the JEE.</p>
+<p class="decription" >My coding journey leveled up when I joined Hack Club—a turning point where I not only improved my skills but also found a community that helped my growth. That experience pushed me to host two REALLY COOL hackathons
+ <a href="https://counterspell.hackclub.com/bengaluru" class="decription-1">CounterSpell</a> <a class="decription-1">and</a> <a href="https://scrapyard.hackclub.com/bengaluru" class="decription-1">Scrapyard</a> in Bengaluru </p> <p class="decription">My builder instinct didn’t stop there. In April 2024, I launched Klide, a next-gen Point of Sale system that’s currently in development. At the same time, I also began working on Stedu OS—an educational platform for Stedu, a nonprofit initiative aimed at shaping the future of education.
+</p><p class="decription">Whether it’s building, shipping, or just Playing Around, I love pushing boundaries with code—and I’m just getting started. wanna know more about my journey <a href="https://counterspell.hackclub.com/bengaluru" class="decription-1">read my journey here</a></p> 
             </div>
             <div class="connect-w-me-cont">
                 <h1 class="connect-w-me">Connect W Me</h1>
                 <div class="button-links-connect-container">
                     <button class="connect-with-me-btn-insta" id="insta" href="https://instagram.com/joelmeinscrapyard" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="-100px" y="-3px" width="50" height="50" viewBox="0 0 48 48"><radialGradient id="yOrnnhliCrdS2gy~4tD8ma_Xy10Jcu1L2Su_gr1" cx="19.38" cy="42.035" r="44.899" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#fd5"></stop><stop offset=".328" stop-color="#ff543f"></stop><stop offset=".348" stop-color="#fc5245"></stop><stop offset=".504" stop-color="#e64771"></stop><stop offset=".643" stop-color="#d53e91"></stop><stop offset=".761" stop-color="#cc39a4"></stop><stop offset=".841" stop-color="#c837ab"></stop></radialGradient><path fill="url(#yOrnnhliCrdS2gy~4tD8ma_Xy10Jcu1L2Su_gr1)" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"></path><radialGradient id="yOrnnhliCrdS2gy~4tD8mb_Xy10Jcu1L2Su_gr2" cx="11.786" cy="5.54" r="29.813" gradientTransform="matrix(1 0 0 .6663 0 1.849)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#4168c9"></stop><stop offset=".999" stop-color="#4168c9" stop-opacity="0"></stop></radialGradient><path fill="url(#yOrnnhliCrdS2gy~4tD8mb_Xy10Jcu1L2Su_gr2)" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"></path><path fill="#fff" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5	s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"></path><circle cx="31.5" cy="16.5" r="1.5" fill="#fff"></circle><path fill="#fff" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12	C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" x="-100px"any y="-3px" width="50" height="50" viewBox="0 0 48 48"><radialGradient id="yOrnnhliCrdS2gy~4tD8ma_Xy10Jcu1L2Su_gr1" cx="19.38" cy="42.035" r="44.899" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#fd5"></stop><stop offset=".328" stop-color="#ff543f"></stop><stop offset=".348" stop-color="#fc5245"></stop><stop offset=".504" stop-color="#e64771"></stop><stop offset=".643" stop-color="#d53e91"></stop><stop offset=".761" stop-color="#cc39a4"></stop><stop offset=".841" stop-color="#c837ab"></stop></radialGradient><path fill="url(#yOrnnhliCrdS2gy~4tD8ma_Xy10Jcu1L2Su_gr1)" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"></path><radialGradient id="yOrnnhliCrdS2gy~4tD8mb_Xy10Jcu1L2Su_gr2" cx="11.786" cy="5.54" r="29.813" gradientTransform="matrix(1 0 0 .6663 0 1.849)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#4168c9"></stop><stop offset=".999" stop-color="#4168c9" stop-opacity="0"></stop></radialGradient><path fill="url(#yOrnnhliCrdS2gy~4tD8mb_Xy10Jcu1L2Su_gr2)" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"></path><path fill="#fff" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5	s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"></path><circle cx="31.5" cy="16.5" r="1.5" fill="#fff"></circle><path fill="#fff" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12	C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18z"></path></svg>
                         <span class="connect-with-me-btn-insta-text">Instagram</span>
                     </button>
 
